[package]

name = "shiny"
version = "0.1.3"
authors = ["Vladimir Pouzanov <farcaller@gmail.com>"]
description = "A simple rspec like test framework to make test code look more nice"
license = "Apache-2.0"
repository = "https://github.com/farcaller/shiny"

[lib]

name = "shiny"
path = "src/lib.rs"
crate_type = ["dylib"]
